extracted_vulnerabilities/pair_211506_448912/vuln_report.txt
extracted_vulnerabilities/pair_211506_448912/inflate_vuln.c:31:10: error: Uninitialized variable: have [uninitvar]
    in = have;
         ^
extracted_vulnerabilities/pair_211506_448912/inflate_vuln.c:32:11: error: Uninitialized variable: left [uninitvar]
    out = left;
          ^
extracted_vulnerabilities/pair_211506_448912/inflate_vuln.c:10:14: style: Variable 'bits' is not assigned a value. [unassignedVariable]
    unsigned bits;              /* bits in bit buffer */
             ^
extracted_vulnerabilities/pair_211506_448912/inflate_vuln.c:19:19: style: Unused variable: hbuf [unusedVariable]
    unsigned char hbuf[4];      /* buffer for gzip header crc calculation */
                  ^
extracted_vulnerabilities/pair_211506_448912/inflate_vuln.c:1:0: style: The function 'inflate' is never used. [unusedFunction]
int ZEXPORT inflate(strm, flush)
^
nofile:0:0: information: Active checkers: 113/592 (use --checkers-report=<filename> to see details) [checkersReport]

